# cpp_vector_rng_lib

./: CMakeLists.txt  README  doxygen.cfg
include/: Distribution.h  DistributionNormale.h  Dvector.h  GenerateurNombreAleatoire.h  GenerateurParkMiller.h  GenerateurXorshift.h
src/: CMakeLists.txt  Distribution.cpp  DistributionNormale.cpp  Dvector.cpp  GenerateurNombreAleatoire.cpp  GenerateurParkMiller.cpp  GenerateurXorshift.cpp
tests/: CMakeLists.txt  test_DistributionNormale.cxx  test_Dvector.cxx  test_GenerateurNombreAleatoire.cxx  test_GenerateurParkMiller.cxx  test_GenerateurXorshift.cxx  test_dvector.cxx
tests/provided_tests/: test1.txt  test2.txt
